# ieeU

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  RELEASE_GUIDE.md  pyproject.toml
.github/workflows/: publish.yml
examples/: sample_settings.json
ieeU/: __init__.py  cli.py  config.py  constants.py  extractor.py  logger.py  mineru.py  processor.py  vlm.py
tests/: __init__.py  test_extractor.py  test_vlm.py
