[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ieeU"
version = "0.1.0"
description = "Tool to replace image links with VLM-generated descriptions in MinerU output"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests>=2.25.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
ieeU = "ieeU.cli:main"

[tool.setuptools.packages.find]
include = ["ieeU*"]
